.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
17:01:07 **** Incremental Build of configuration Debug for project stm32c0_adc ****
make -j12 all 
arm-none-eabi-gcc "../App/ap.c" -mcpu=cortex-m0plus -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32C031xx -c -I../Core/Inc -I../Drivers/STM32C0xx_HAL_Driver/Inc -I../Drivers/STM32C0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32C0xx/Include -I../Drivers/CMSIS/Include -I"C:/repos/stm32/stm32c0_adc/App/include" -I"C:/repos/stm32/stm32c0_adc/App/src" -I"C:/repos/stm32/stm32c0_adc/App" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"App/ap.d" -MT"App/ap.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "App/ap.o"
arm-none-eabi-gcc -o "stm32c0_adc.elf" @"objects.list"   -mcpu=cortex-m0plus -T"C:\repos\stm32\stm32c0_adc\STM32C031C6TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="stm32c0_adc.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: stm32c0_adc.elf
 
arm-none-eabi-size  stm32c0_adc.elf 
arm-none-eabi-objdump -h -S stm32c0_adc.elf  > "stm32c0_adc.list"
   text	   data	    bss	    dec	    hex	filename
  13548	     16	   1752	  15316	   3bd4	stm32c0_adc.elf
Finished building: default.size.stdout
 
Finished building: stm32c0_adc.list
 
17:01:11 **** Incremental Build of configuration Debug for project stm32c0_adc ****
make -j12 all 
arm-none-eabi-size  stm32c0_adc.elf 
   text	   data	    bss	    dec	    hex	filename
  13548	     16	   1752	  15316	   3bd4	stm32c0_adc.elf
Finished building: default.size.stdout
 
17:10:14 **** Incremental Build of configuration Debug for project stm32c0_adc ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m0plus -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32C031xx -c -I../Core/Inc -I../Drivers/STM32C0xx_HAL_Driver/Inc -I../Drivers/STM32C0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32C0xx/Include -I../Drivers/CMSIS/Include -I"C:/repos/stm32/stm32c0_adc/App/include" -I"C:/repos/stm32/stm32c0_adc/App/src" -I"C:/repos/stm32/stm32c0_adc/App" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc "../App/src/adc.c" -mcpu=cortex-m0plus -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32C031xx -c -I../Core/Inc -I../Drivers/STM32C0xx_HAL_Driver/Inc -I../Drivers/STM32C0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32C0xx/Include -I../Drivers/CMSIS/Include -I"C:/repos/stm32/stm32c0_adc/App/include" -I"C:/repos/stm32/stm32c0_adc/App/src" -I"C:/repos/stm32/stm32c0_adc/App" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"App/src/adc.d" -MT"App/src/adc.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "App/src/adc.o"
arm-none-eabi-gcc "../App/src/led.c" -mcpu=cortex-m0plus -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32C031xx -c -I../Core/Inc -I../Drivers/STM32C0xx_HAL_Driver/Inc -I../Drivers/STM32C0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32C0xx/Include -I../Drivers/CMSIS/Include -I"C:/repos/stm32/stm32c0_adc/App/include" -I"C:/repos/stm32/stm32c0_adc/App/src" -I"C:/repos/stm32/stm32c0_adc/App" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"App/src/led.d" -MT"App/src/led.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "App/src/led.o"
arm-none-eabi-gcc "../App/src/pwm.c" -mcpu=cortex-m0plus -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32C031xx -c -I../Core/Inc -I../Drivers/STM32C0xx_HAL_Driver/Inc -I../Drivers/STM32C0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32C0xx/Include -I../Drivers/CMSIS/Include -I"C:/repos/stm32/stm32c0_adc/App/include" -I"C:/repos/stm32/stm32c0_adc/App/src" -I"C:/repos/stm32/stm32c0_adc/App" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"App/src/pwm.d" -MT"App/src/pwm.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "App/src/pwm.o"
arm-none-eabi-gcc "../App/src/utils.c" -mcpu=cortex-m0plus -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32C031xx -c -I../Core/Inc -I../Drivers/STM32C0xx_HAL_Driver/Inc -I../Drivers/STM32C0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32C0xx/Include -I../Drivers/CMSIS/Include -I"C:/repos/stm32/stm32c0_adc/App/include" -I"C:/repos/stm32/stm32c0_adc/App/src" -I"C:/repos/stm32/stm32c0_adc/App" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"App/src/utils.d" -MT"App/src/utils.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "App/src/utils.o"
arm-none-eabi-gcc "../App/ap.c" -mcpu=cortex-m0plus -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32C031xx -c -I../Core/Inc -I../Drivers/STM32C0xx_HAL_Driver/Inc -I../Drivers/STM32C0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32C0xx/Include -I../Drivers/CMSIS/Include -I"C:/repos/stm32/stm32c0_adc/App/include" -I"C:/repos/stm32/stm32c0_adc/App/src" -I"C:/repos/stm32/stm32c0_adc/App" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"App/ap.d" -MT"App/ap.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "App/ap.o"
../App/src/adc.c: In function 'adcReadVoltage':
../App/src/adc.c:41:3: error: unknown type name 'uin32_t'; did you mean 'uint32_t'?
   41 |   uin32_t ret;
      |   ^~~~~~~
      |   uint32_t
make: *** [App/src/subdir.mk:28: App/src/adc.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j12 all" terminated with exit code 2. Build might be incomplete.
17:10:30 **** Incremental Build of configuration Debug for project stm32c0_adc ****
make -j12 all 
arm-none-eabi-gcc "../App/src/adc.c" -mcpu=cortex-m0plus -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32C031xx -c -I../Core/Inc -I../Drivers/STM32C0xx_HAL_Driver/Inc -I../Drivers/STM32C0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32C0xx/Include -I../Drivers/CMSIS/Include -I"C:/repos/stm32/stm32c0_adc/App/include" -I"C:/repos/stm32/stm32c0_adc/App/src" -I"C:/repos/stm32/stm32c0_adc/App" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"App/src/adc.d" -MT"App/src/adc.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "App/src/adc.o"
arm-none-eabi-gcc -o "stm32c0_adc.elf" @"objects.list"   -mcpu=cortex-m0plus -T"C:\repos\stm32\stm32c0_adc\STM32C031C6TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="stm32c0_adc.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: stm32c0_adc.elf
 
arm-none-eabi-size  stm32c0_adc.elf 
arm-none-eabi-objdump -h -S stm32c0_adc.elf  > "stm32c0_adc.list"
   text	   data	    bss	    dec	    hex	filename
  13648	     16	   1752	  15416	   3c38	stm32c0_adc.elf
Finished building: default.size.stdout
 
Finished building: stm32c0_adc.list
 
17:11:35 **** Incremental Build of configuration Debug for project stm32c0_adc ****
make -j12 all 
arm-none-eabi-gcc "../App/ap.c" -mcpu=cortex-m0plus -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32C031xx -c -I../Core/Inc -I../Drivers/STM32C0xx_HAL_Driver/Inc -I../Drivers/STM32C0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32C0xx/Include -I../Drivers/CMSIS/Include -I"C:/repos/stm32/stm32c0_adc/App/include" -I"C:/repos/stm32/stm32c0_adc/App/src" -I"C:/repos/stm32/stm32c0_adc/App" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"App/ap.d" -MT"App/ap.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "App/ap.o"
arm-none-eabi-gcc -o "stm32c0_adc.elf" @"objects.list"   -mcpu=cortex-m0plus -T"C:\repos\stm32\stm32c0_adc\STM32C031C6TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="stm32c0_adc.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: stm32c0_adc.elf
 
arm-none-eabi-size  stm32c0_adc.elf 
arm-none-eabi-objdump -h -S stm32c0_adc.elf  > "stm32c0_adc.list"
   text	   data	    bss	    dec	    hex	filename
  14552	     16	   1752	  16320	   3fc0	stm32c0_adc.elf
Finished building: default.size.stdout
 
Finished building: stm32c0_adc.list
 
17:11:55 **** Incremental Build of configuration Debug for project stm32c0_adc ****
make -j12 all 
arm-none-eabi-size  stm32c0_adc.elf 
   text	   data	    bss	    dec	    hex	filename
  14552	     16	   1752	  16320	   3fc0	stm32c0_adc.elf
Finished building: default.size.stdout
 
17:11:58 **** Incremental Build of configuration Debug for project stm32c0_adc ****
make -j12 all 
arm-none-eabi-size  stm32c0_adc.elf 
   text	   data	    bss	    dec	    hex	filename
  14552	     16	   1752	  16320	   3fc0	stm32c0_adc.elf
Finished building: default.size.stdout
 
17:12:39 **** Incremental Build of configuration Debug for project stm32c0_adc ****
make -j12 all 
arm-none-eabi-size  stm32c0_adc.elf 
   text	   data	    bss	    dec	    hex	filename
  14552	     16	   1752	  16320	   3fc0	stm32c0_adc.elf
Finished building: default.size.stdout
 
